deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: worldmonitor
  labels:
    app.kubernetes.io/name: worldmonitor
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: worldmon
spec:
  to:
    kind: Service
    name: worldmonitor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
